--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     --primary: #199cdb
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 a   {
     text-decoration: none;
 }
@@ -58,6 +62,7 @@ nav {
     border: none;
     border-radius: 4px;
     color: white;
+    cursor: pointer;
 }
 
 /* Header */
@@ -281,4 +286,211 @@ nav {
 
 .review__occupation{
     font-size: 12px;
+}
+
+/* Pricing */
+
+.pricing__row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 16px;
+}
+
+.pricing__title{
+    font-size: 32px;
+}
+
+.pricing__para{
+    max-width: 600px;
+    line-height: 1.5;
+}
+
+.pricing__plans{
+    display: flex;
+    width: 100%;
+    gap: 32px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.plan{
+    max-width: 300px;
+    width: 100%;
+    height: 510px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);
+    padding: 32px 12px;
+}
+
+.plan__title{
+    font-size: 28px;
+    color: var(--primary);
+}
+
+.plan__icon{
+    font-size: 48px;
+    color: var(--primary);
+}
+
+.plan__price{
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--primary);
+}
+
+.plan__feature{
+    display: flex;
+    flex-direction: column;
+    margin-top: 32px;
+    grid-area: 16px;
+    list-style: none;
+}
+
+.plan__feature{
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.plan__button{
+    margin-top: 32px;
+    background-color: var(--primary);
+    border: none;
+    color: white;
+    padding: 12px 20px;
+    border-radius: 4px;
+}
+
+/* Footer */
+
+footer{
+    height: 64px;
+    background-color: var(--primary);
+    color: white;
+}
+
+.footer__row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.footer__logo{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.footer__link{
+    margin: 0 8px;
+    color: white;
+    font-size: 14px;
+}
+
+/* Tablets */
+
+
+@media (max-width: 768px){
+    .nav__link,
+    .nav__link__button{
+        font-size: 14px;
+    }
+
+    .header__title{
+        font-size: 32px;
+    }
+
+    .header__para{
+        font-size: 14px;
+    }
+
+    .header__button{
+        font-size: 12px;
+    }
+
+    .card{
+        width: 50%;
+    }
+    .feature__title{
+        font-size: 20px;
+    }
+    .features__para{
+        font-size: 14px;
+    }
+    .review__text{
+        font-size: 16px;
+    }
+}
+
+/* Smartphones */
+
+@media (max-width: 480px) {
+    .nav__link:not(:last-child){
+        display: none;
+    }
+    .header__title{
+        font-size: 24px;
+    }
+    .products__title,
+    .features__title,
+    .reviews__title,
+    .pricing__title{
+        font-size: 24px;
+    }
+    .products__para,
+    .features__para,
+    .reviews__para,
+    .pricing__para{
+        font-size: 24px;
+    }
+
+    .card{
+        width: 100%;
+        padding: 20px;
+    }
+    .card__title{
+        font-size: 20px;
+    }
+    .card__para{
+        font-size: 12px;
+    }
+    .feature{
+        flex-direction: column;
+    }
+    .feature:last-child{
+        flex-direction: column-reverse;
+    }
+
+    .feature__image{
+        width: 100%;
+    }
+    .feature__text{
+        align-items: center;
+        text-align: center;
+    }
+
+    .review{
+        flex-direction: column;
+        height: 400px;
+        width: 100%;
+    }
+    .review__text,
+    .review__credit{
+        width: 100%;
+        height: 50%;
+    }
+    .footer__logo{
+        display: none;
+    }
+    .footer__row{
+        justify-content: center;
+    }
+    .footer__link{
+        margin: 0 4px;
+    }
 }
